@@ -71,6 +71,13 @@
       been updated to match those used in Named Destinations.  Various bugs have
       been fixed when reading or modifying outlines in existing PDFs.
 
+    - A PDF version number specified in the document catalog is now respected by
+      $pdf->version().  Added $pdf->header_version() and $pdf->trailer_version()
+      accessors.
+
+    - Added $pdf->require_version($version) to increase the PDF version if
+      needed by certain features.
+
 
 2.041     2021-07-27
 
